Changes to blog name

--- a/hugo.toml
+++ b/hugo.toml
@@ -3,7 +3,7 @@ baseURL = "https://yourdomain.com"
 defaultContentLanguage = "en"
 # language code
 languageCode = "en"
-title = "NAME_OF_YOUR_BLOG"
+title = "J Brew's Blog"
 
 # Change the default theme to be use when building the site with Hugo
 theme = "LoveIt"
@@ -97,7 +97,7 @@ theme = "LoveIt"
   #  App icon config
   [params.app]
     # optional site title override for the app when added to an iOS home screen or Android launcher
-    title = "NAME_OF_YOUR_BLOG"
+    title = "J Brew's Blog"
     # whether to omit favicon resource links
     noFavicon = false
     # modern SVG favicon to use in place of older style .png and .ico files
@@ -142,7 +142,7 @@ theme = "LoveIt"
       # URL of the LOGO
       logo = ""
       # title name
-      name = "NAME_OF_YOUR_BLOG"
+      name = "J Brew's Blog"
       # you can add extra information before the name (HTML format is supported), such as icons
       pre = ""
       # you can add extra information after the name (HTML format is supported), such as icons
@@ -196,9 +196,9 @@ theme = "LoveIt"
       # Gravatar Email for preferred avatar in home page
       gravatarEmail = ""
       # URL of avatar shown in home page (LINK_TO_YOUR_PHOTO_BELOW)
-      avatarURL = "https://avatars.githubusercontent.com/u/7815661?v=4"
+      avatarURL = "https://drive.google.com/file/d/1ABk5DzINeJfQwsuXXeXuz2DJ7m0EV01z/view?usp=drive_link"
       #  title shown in home page (HTML format is supported)
-      title = "NAME_OF_YOUR_BLOG"
+      title = "J Brew's Blog"
       # subtitle shown in home page
       subtitle = "My AWS DevOps Engineering Journey"
       # whether to use typeit animation for subtitle
@@ -220,15 +220,15 @@ theme = "LoveIt"
   [params.social]
     Bitbucket = ""
     GitHub = ""
-    Linkedin = "YOUR_LINKEDIN_LINK"
+    Linkedin = "https://www.linkedin.com/in/jermainebrewer/"
     Twitter = ""
     Gitlab = ""
-    Email = ""
+    Email = "jbrewinthecloud@gmail.com"
     Instagram = ""
     Slidershare = ""
     Goodreads = ""
     Stackoverflow = ""
-    Medium = ""
+    Medium = "https://jbrewinthecloud.com/"
     Matrix = ""
     Hackernews = ""
     Soundcloud = ""
@@ -511,7 +511,7 @@ theme = "LoveIt"
 
 # Author config
 [author]
-  name = "YOUR_NAME"
+  name = "Jermaine Brewer"
   email = ""
   link = ""
 
