--- a/.github/workflows/blog-release.yml
+++ b/.github/workflows/blog-release.yml
@@ -43,4 +43,9 @@ jobs:
           audience: sts.amazonaws.com
           aws-region: us-east-1
           role-to-assume: arn:aws:iam::851725404156:role/GitHubActions
+
+      - name: Sync public/ folder to S3
+        run: |
+          aws s3 sync public/ s3://my-startup-bootcamp/ --delete
+
           
