--- a/.github/workflows/blog-release.yml
+++ b/.github/workflows/blog-release.yml
@@ -52,5 +52,5 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: |
           aws cloudfront create-invalidation \
-            --distribution-id YOUR_CLOUDFRONT_DISTRIBUTION_ID \
+            --distribution-id E5BTNS59XQMFC \
             --paths "/*" 
