--- a/.github/workflows/blog-release.yml
+++ b/.github/workflows/blog-release.yml
@@ -31,12 +31,15 @@ jobs:
 
       - name: Initialize Terraform
         run: terraform init
+        working-directory: ./terraform
 
       - name: Terraform Plan
         run: terraform plan
+        working-directory: ./terraform
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
+        working-directory: ./terraform
 
   deploy-site:
     name: Deploy Hugo Site
