--- a/.github/workflows/blog-release.yml
+++ b/.github/workflows/blog-release.yml
@@ -14,6 +14,9 @@ jobs:
   deploy-infra:
     name: Deploy Infrastructure to AWS
     runs-on: ubuntu-22.04
+    env:
+      TERRAFORM_CLOUD_TOKEN: ${{ secrets.TERRAFORM_CLOUD_TOKEN }}
+
 
     steps:
       - name: Checkout code
