--- a/.github/workflows/blog-release.yml
+++ b/.github/workflows/blog-release.yml
@@ -15,7 +15,7 @@ jobs:
     name: Deploy Infrastructure to AWS
     runs-on: ubuntu-22.04
     env:
-      TERRAFORM_CLOUD_TOKEN: ${{ secrets.TERRAFORM_CLOUD_TOKEN }}
+      TF_TOKEN_app_terraform_io: ${{ secrets.TERRAFORM_CLOUD_TOKEN }}
 
 
     steps:
